2020-05-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Initial version 0.0.1
