@@ -1,2 +1,4 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
+^rawdata
+^.*\.tar\.gz$
