@@ -5,3 +5,4 @@
 *~
 */*~
 rawdata/*/*Contents-*gz
+*.tar.gz
