@@ -1,1 +1,2 @@
 exportPattern("^[[:alpha:]]+")
+importFrom("utils", "read.table")
