@@ -1,3 +1,12 @@
+2020-05-28  Dirk Eddelbuettel  <edd@debian.org>
+
+	* README.md: Expanded description
+
+	* NAMESPACE: Add read.table imports
+
+	* R/libs.R (checkSharedLibs): Add documentation
+	* man/checkSharedLibs.Rd: Idem
+
 2020-05-27  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Initial version 0.0.1
